package pt.leo.factory.creators;

import pt.leo.factory.products.Ship;

public abstract class ShipFactory {
    public abstract Ship createShip();
}
