@startuml
'https://plantuml.com/class-diagram

abstract class ShipFactory
class BalancedShipFactory
class RandomShipFactory

class CargoBasic
class CargoExcel
class Ship

CargoBasic <- BalancedShipFactory
CargoExcel <- BalancedShipFactory
CargoBasic <- RandomShipFactory
CargoExcel <- RandomShipFactory

ShipFactory <|-- BalancedShipFactory
ShipFactory <|-- RandomShipFactory

Ship <|-- CargoBasic
Ship <|-- CargoExcel

@enduml